fixing login layout bug

--- a/src/components/showTable.css
+++ b/src/components/showTable.css
@@ -1,6 +1,6 @@
-.input{
+.search_bar{
     margin-top: 10px;
-    margin-left: 55%;
+    margin-left: 75%;
 }
 
 .content{
